# tic-tac-toe

./: .gitignore  CMakeLists.txt  README.md  TODO
.devcontainer/: Dockerfile  devcontainer.json
src/: makefile
src/game/: CMakeLists.txt  main.c  makefile  terminal_tic_tac_toe.c
src/gamelib/: CMakeLists.txt  makefile  tic_tac_toe.c  tic_tac_toe.h
src/termgame/: CMakeLists.txt  terminal_tic_tac_toe.h
test/game/: CMakeLists.txt
test/gamelib/: CMakeLists.txt  test_tic_tac_toe.c
test/termgame/: CMakeLists.txt  test_terminal_tic_tac_toe.c
tools/: .gitignore  build-all.sh  install-dev-tools.sh  run-tests.sh
